files/kubernetes/manifests/applications/sillytavern/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sillytavern
  labels:
    app.kubernetes.io/name: sillytavern
    app.kubernetes.io/environment: prod
