files/kubernetes/manifests/applications/sillytavern/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sillytavern
  namespace: sillytavern
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sillytavern.kojigenba-srv.com
      secretName: sillytavern-tls
  rules:
    - host: sillytavern.kojigenba-srv.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sillytavern
                port:
                  number: 8000
